--- a/app/elements/wcs/wcs-elements.html
+++ b/app/elements/wcs/wcs-elements.html
@@ -1,3 +1,4 @@
 <!-- WCS Element -->
 <link rel="import" href="./wcs-job-status.html" />
 <link rel="import" href="./wcs-wave-mgt.html" />
+<link rel="import" href="./wcs-wave-preprocess.html" />
