작업배치에 단포 (SPS) 기능 추가

--- a/app/elements/logis/job-batch-detail.html
+++ b/app/elements/logis/job-batch-detail.html
@@ -234,7 +234,7 @@ Copyright © HatioLab Inc. All rights reserved.
         ajax.resourceId = this.sourceBatch.id;
         var jobType = this.sourceBatch.job_type;
 
-        if (jobType == 'DAS' || jobType == 'RTN' || jobType == 'DPS' || jobType == 'PDAS' || jobType == 'SRTN' || jobType == 'SDAS' || jobType == 'SDPS') {
+        if (jobType == 'DAS' || jobType == 'RTN' || jobType == 'DPS' || jobType == 'PDAS' || jobType == 'SPS' || jobType == 'SRTN' || jobType == 'SDAS' || jobType == 'SDPS') {
           ajax.queryFields = [{
             name: 'status',
             value: 'RUN'
