오더피킹 분할 버튼 추가
1

--- a/app/elements/logis/das-job-batch.html
+++ b/app/elements/logis/das-job-batch.html
@@ -286,7 +286,7 @@ Copyright © HatioLab Inc. All rights reserved.
             return Object.assign(new Object(), b);
 
           } else if (status === 'WAIT') {
-            b.hidden = !(b.id == 'order_preprocess-btn' || b.id == 'merge_batch-btn' || b.id == 'cancel_order-btn' || b.id == 'target_class-btn' || b.id == 'order_split_2sku-btn' || b.id == 'order_split_3sku-btn' || b.id == 'order_split_ot-btn' || b.id == 'order_split_hw-btn');
+            b.hidden = !(b.id == 'order_preprocess-btn' || b.id == 'merge_batch-btn' || b.id == 'cancel_order-btn' || b.id == 'target_class-btn' || b.id == 'order_split_2sku-btn' || b.id == 'order_split_3sku-btn' || b.id == 'order_split_ot-btn' || b.id == 'order_split_hw-btn' || b.id == 'order_split_ops-btn');
             return Object.assign(new Object(), b);
 
           } else if (status === 'READY') {
@@ -306,7 +306,7 @@ Copyright © HatioLab Inc. All rights reserved.
             return Object.assign(new Object(), b);
 
           } else {
-            b.hidden = (b.id == 'recommend_box_type-btn' || b.id == 'order_preprocess-btn' || b.id == 'merge_batch-btn' || b.id == 'cancel_order-btn' || b.id == 'target_class-btn' || b.id == 'order_split_2sku-btn' || b.id == 'order_split_3sku-btn' || b.id == 'order_split_ot-btn' || b.id == 'total_picking_instruct-btn' || b.id == 'split_cancel-btn' || b.id == 'change_type_to_hw-btn' || b.id == 'batch_job_seq_up-btn' || b.id == 'job_instruct-btn' || b.id == 'cancel_job_instruct-btn' || b.id == 'job_complete-btn' || b.id == 'copy_region-btn' || b.id == 'group_complete-btn' || b.id == 'order_split_hw-btn');
+            b.hidden = (b.id == 'recommend_box_type-btn' || b.id == 'order_preprocess-btn' || b.id == 'merge_batch-btn' || b.id == 'cancel_order-btn' || b.id == 'target_class-btn' || b.id == 'order_split_2sku-btn' || b.id == 'order_split_3sku-btn' || b.id == 'order_split_ot-btn' || b.id == 'total_picking_instruct-btn' || b.id == 'split_cancel-btn' || b.id == 'change_type_to_hw-btn' || b.id == 'batch_job_seq_up-btn' || b.id == 'job_instruct-btn' || b.id == 'cancel_job_instruct-btn' || b.id == 'job_complete-btn' || b.id == 'copy_region-btn' || b.id == 'group_complete-btn' || b.id == 'order_split_hw-btn' || b.id == 'order_split_ops-btn');
             return Object.assign(new Object(), b);
           }
         });
